--- a/Main Website Page.html
+++ b/Main Website Page.html
@@ -49,12 +49,12 @@ h1 {
 .dropdown-content a:hover {background-color: #ddd;}
 .dropdown:hover .dropdown-content {display: block;}
 .dropdown:hover .dropbtn {background-color: black; color: yellow;}
-}
+
 </style>
 </head>
 <body background="https://www.intechnic.com/hubfs/Blog/Featured%20Images/12%20Best%20Hospital%20and%20Healthcare%20Websites.jpg">
 
-<img  align="right" border="3px" src="logo.jpg" alt="logo" width="250" height="150">
+<img  align="right" border="3px" src="images/logo.jpg" alt="logo" width="250" height="150">
 
 <h1 align="left"><u><b>WELCOME TO FORTIS HEALTHCARE</b></u></h1>
 
@@ -87,16 +87,16 @@ h1 {
 </tr>
 <table style="width:100%" align=center>
 <tr>
-<th> <img onmouseover="bg(this)" onmouseout="nor(this)" src="a.jpg" width="300" height="200" ></th>
-<th> <img  onmouseover="bg(this)" onmouseout="nor(this)" src="b.jpg" width="300" height="200" ></th></th>
-<th> <img  onmouseover="bg(this)" onmouseout="nor(this)" src="d.jpg" width="300" height="200"></th>
-<th> <img  onmouseover="bg(this)" onmouseout="nor(this)" src="e.jpg" width="300" height="200" ></th>
+<th> <img onmouseover="bg(this)" onmouseout="nor(this)" src="images/a.jpg" width="300" height="200" ></th>
+<th> <img  onmouseover="bg(this)" onmouseout="nor(this)" src="images/b.jpg" width="300" height="200" ></th></th>
+<th> <img  onmouseover="bg(this)" onmouseout="nor(this)" src="images/d.jpg" width="300" height="200"></th>
+<th> <img  onmouseover="bg(this)" onmouseout="nor(this)" src="images/e.jpg" width="300" height="200" ></th>
 </tr>
 <tr>
-<th> <img  onmouseover="bg(this)" onmouseout="nor(this)" src="g.jpg" width="300" height="200" ></th>
-<th> <img onmouseover="bg(this)" onmouseout="nor(this)" src="h.jpg" width="300" height="200" ></th>
-<th> <img  onmouseover="bg(this)" onmouseout="nor(this)" src="i.jpg" width="300" height="200" ></th>
-<th> <img  onmouseover="bg(this)" onmouseout="nor(this)" src="k.jpg" width="300" height="200"></th>
+<th> <img  onmouseover="bg(this)" onmouseout="nor(this)" src="images/g.jpg" width="300" height="200" ></th>
+<th> <img onmouseover="bg(this)" onmouseout="nor(this)" src="images/h.jpg" width="300" height="200" ></th>
+<th> <img  onmouseover="bg(this)" onmouseout="nor(this)" src="images/i.jpg" width="300" height="200" ></th>
+<th> <img  onmouseover="bg(this)" onmouseout="nor(this)" src="images/k.jpg" width="300" height="200"></th>
 </tr>
 <script>
 function bg(x) {
