--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@ color:white;
 </style>
 
 </head>
-<body background="download.jpg" align="center">
+<body background="images/download.jpg" align="center">
 
 <h1 align="CENTER">ABOUT US</h1>
 <p>The fortis is open to all patients every day and provides fundamental medical care and cutting-edge medicine in a central location in mumbai. We use our superior academic knowledge to treat a wide range of health issues, taking a personal touch and utilizing highly specialized and up-to-date research.
