--- a/account.html
+++ b/account.html
@@ -21,7 +21,7 @@ color:white;
 }
 </style>
 </head>
-<body background="download.jpg" align="center">
+<body background="images/download.jpg" align="center">
 <h1 align="center">MY ACCOUNT</h1>
 <div id="show1">
 <table style="width:100%" align="center">
