--- a/dermatology page.html
+++ b/dermatology page.html
@@ -2,7 +2,7 @@
 <head>
 <style>
 body {
-background-image: url('dermato.jpg');
+background-image: url('images/dermato.jpg');
 background-size: cover;
 color:white;
 }
