--- a/emergency.html
+++ b/emergency.html
@@ -2,7 +2,7 @@
 <head>
 <style>
  body{
-  background-image: url('emer.png');
+  background-image: url('images/emer.png');
   background-size: cover;
  }
 h1 {
@@ -27,7 +27,7 @@ color:white;
 </head>
 <body  >
 <div id="form" >
-<img  align="left" border="3px" src="emergency.jpg" alt="logo" width="275" height="175">
+<img  align="left" border="3px" src="images/emergency.jpg" alt="logo" width="275" height="175">
 
 <h1 align="right"><b>WELCOME TO FORTIS EMERGENCY DEPARTMENT</b></h1>
 <font size="4">
@@ -42,8 +42,8 @@ color:white;
 6. Waiting areas for family and friends.<br>
 </p>
 <b><u>Fortis Emergency Department also includes:</u></b><br>
-<p>1. Supports our cardiology patients by reducing door-to-“balloon” time for patients needing immediate cardiac catheter treatment. This means one of the fastest times-to-treatment in the region for cardiac patients.<br>
-2. Facilitates immediate patient entry into the hospital’s Stroke Program, which is dedicated to improving recovery rates for stroke patients through rapid response, team medicine, and a standardized plan of care.<br>
+<p>1. Supports our cardiology patients by reducing door-to-ï¿½balloonï¿½ time for patients needing immediate cardiac catheter treatment. This means one of the fastest times-to-treatment in the region for cardiac patients.<br>
+2. Facilitates immediate patient entry into the hospitalï¿½s Stroke Program, which is dedicated to improving recovery rates for stroke patients through rapid response, team medicine, and a standardized plan of care.<br>
 Our physicians, nurses and staff are committed to providing personalized, quality care with compassion, dignity and respect. Our staff includes physicians who are board certified in emergency medicine and emergency nurses with Advanced Cardiac Life Support (ACLS), pediatric and trauma training. Our goal is to provide you and your family with the best emergency care and outstanding customer service.<br>
 </p>
 </font>
