--- a/neurology page.html
+++ b/neurology page.html
@@ -2,7 +2,7 @@
 <head>
 <style>
 body {
-background-image: url('n.jpg');
+background-image: url('images/n.jpg');
 background-size: cover;
 color:white;
 }
