--- a/orthopadics page.html
+++ b/orthopadics page.html
@@ -2,7 +2,7 @@
 <head>
 <style>
 body {
-background-image: url('o.jpg');
+background-image: url('images/o.jpg');
 background-size: cover;
 color:white;
 }
