--- a/radiology page.html
+++ b/radiology page.html
@@ -2,7 +2,7 @@
 <head>
 <style>
 body {
-background-image: url('r.jpg');
+background-image: url('images/r.jpg');
 background-size: cover;
 color:white;
 }
@@ -37,7 +37,7 @@ color:white;
 => Radiation safety/protection.<br>
 => Radiation effects on the human body.<br>
 =>Appropriate performance and interpretation of quality radiologic and medical imaging examinations.<br>
-<p>The majority of radiologists also complete a fellowship — one to two additional years of specialized training in a particular subspecialty of radiology, such as breast imaging, cardiovascular radiology or nuclear medicine.</p>
+<p>The majority of radiologists also complete a fellowship ï¿½ one to two additional years of specialized training in a particular subspecialty of radiology, such as breast imaging, cardiovascular radiology or nuclear medicine.</p>
 </div>
 <br><button class="a" onclick="window.location.href = 'project.html';">BACK</button>
 </body>
