--- a/surgery page.html
+++ b/surgery page.html
@@ -2,7 +2,7 @@
 <head>
 <style>
 body {
-background-image: url('s.jpg');
+background-image: url('images/s.jpg');
 background-size: cover;
 color:white;
 }
