--- a/appointment.html
+++ b/appointment.html
@@ -2,7 +2,7 @@
 <head>
 <style>
  body{
-  background-image: url('img.jpg');
+  background-image: url('images/img.jpg');
   background-size: cover;
 color:white;
  }
