--- a/cardiology page.html
+++ b/cardiology page.html
@@ -2,7 +2,7 @@
 <head>
 <style>
 body {
-background-image: url('heart.jpg');
+background-image: url('images/heart.jpg');
 background-size: cover;
 color:white;
 }
@@ -17,7 +17,7 @@ color:white;
 }
 </style>
 </head>
-<body background="downlo.jpg" >
+<body>
 <h1 align="center">CARDIOLOGY</h1>
 <p><font size="5"><b><u>About the Cardiology Department</u></b></p>
 <p>Cardiology is the medical speciality dealing with the diagnosis and treatment of diseases and disorders of the heart.</p>
