--- a/details.html
+++ b/details.html
@@ -2,7 +2,7 @@
 <head>
 <style>
 body {
-background-image: url('img.png');
+background-image: url('images/img.png');
 background-size: cover;
 }
 h1 {
@@ -50,15 +50,15 @@ border:3px white;
 <body align="center">
 <h1 align="center" >APPOINTMENT DETAILS</h1>
 <div id="show1" align="center">
-<br><img src="1.jpg" width="150" height="175"><br>
+<br><img src="images/1.jpg" width="150" height="175"><br>
 Appointment Id: 4789<br> Name: preeti jangid<br> Age: 16<br> Department: dermatology<br>Appointment Date: 12-4-2019<br>
 </div>
 <div id="show2" align="center">
-<br><img src="3.jpg" width="150" height="175"><br>
+<br><img src="images/3.jpg" width="150" height="175"><br>
 Appointment Id: 4892<br> Name: robin cook<br> Age: 55<br> Department: cardiology<br>Appointment Date: 18-4-2019<br>
 </div>
 <div id="show3" align="center">
-<br><img src="2.jpg" width="150" height="175"><br>
+<br><img src="images/2.jpg" width="150" height="175"><br>
 Appointment Id: 4809<br> Name: sher singh<br> Age: 25<br> Department: surgery<br>Appointment Date: 14-4-2019<br>
 </div>
 <br><br><button class="a" onclick="window.location.href = 'project.html';">BACK</button>
