--- a/info.html
+++ b/info.html
@@ -2,7 +2,7 @@
 <head>
 <style>
 body {
-background-image: url('img.png');
+background-image: url('images/img.png');
 background-size: cover;
 }
 h1 {
@@ -33,7 +33,7 @@ color:white;
 <div id="show1" align="center">
 <table style="width:100%" align="center">
 <tr>
-<th><img src="10.jpg" width="50px" height="70px"></th>
+<th><img src="images/10.jpg" width="50px" height="70px"></th>
 <th>Name: Naresh Gupta<br>Experience: 4 years<br>Department: cardiology</th>
 </tr>
 </table>
@@ -44,7 +44,7 @@ color:white;
 <div id="show1" align="center">
 <table style="width:100%" align="center">
 <tr>
-<th><img src="11.jpg" width="50px" height="70px"></th>
+<th><img src="images/11.jpg" width="50px" height="70px"></th>
 <th>Name: Ramesh Singh<br>Experience: 9 years<br>Department: cardiology</th>
 </tr>
 </table>
@@ -55,7 +55,7 @@ color:white;
 <div id="show1" align="center">
 <table style="width:100%" align="center">
 <tr>
-<th><img src="12.jpg" width="50px" height="70px"></th>
+<th><img src="images/12.jpg" width="50px" height="70px"></th>
 <th>Name: Ramesh Singh<br>Experience: 9 years<br>Department: cardiology</th>
 </tr>
 </table>
@@ -68,7 +68,7 @@ color:white;
 <div id="show1" align="center">
 <table style="width:100%" align="center">
 <tr>
-<th><img src="13.jpg" width="50px" height="70px"></th>
+<th><img src="images/13.jpg" width="50px" height="70px"></th>
 <th>Name: Alexa Morgan<br>Experience: 5 years<br>Department: dermatology</th>
 </tr>
 </table>
@@ -79,7 +79,7 @@ color:white;
 <div id="show1" align="center">
 <table style="width:100%" align="center">
 <tr>
-<th><img src="14.jpg" width="50px" height="70px"></th>
+<th><img src="images/14.jpg" width="50px" height="70px"></th>
 <th>Name: Raghu Sharma<br>Experience: 2 years<br>Department: orthopaedics</th>
 </tr>
 </table>
@@ -90,7 +90,7 @@ color:white;
 <div id="show1" align="center">
 <table style="width:100%" align="center">
 <tr>
-<th><img src="15.jpg" width="50px" height="70px"></th>
+<th><img src="images/15.jpg" width="50px" height="70px"></th>
 <th>Name: Ramesh Singh<br>Experience: 9 years<br>Department: cardiology</th>
 </tr>
 </table>
@@ -103,7 +103,7 @@ color:white;
 <div id="show1" align="center">
 <table style="width:100%" align="center">
 <tr>
-<th><img src="16.jpg" width="50px" height="70px"></th>
+<th><img src="images/16.jpg" width="50px" height="70px"></th>
 <th>Name: Ravi Chandra Reddy<br>Experience: 6 years<br>Department: neurology</th>
 </tr>
 </table>
@@ -114,7 +114,7 @@ color:white;
 <div id="show1" align="center">
 <table style="width:100%" align="center">
 <tr>
-<th><img src="17.jpg" width="50px" height="70px"></th>
+<th><img src="images/17.jpg" width="50px" height="70px"></th>
 <th>Name: Anuj Soni<br>Experience: 8 years<br>Department: orthopaedics</th>
 </tr>
 </table>
@@ -124,7 +124,7 @@ color:white;
 <div id="show1" align="center">
 <table style="width:100%" align="center">
 <tr>
-<th><img src="18.jpg" width="50px" height="70px"></th>
+<th><img src="images/18.jpg" width="50px" height="70px"></th>
 <th>Name: Ramesh Singh<br>Experience: 9 years<br>Department: cardiology</th>
 </tr>
 </table>
@@ -137,7 +137,7 @@ color:white;
 <div id="show1" align="center">
 <table style="width:100%" align="center">
 <tr>
-<th><img src="19.jpg" width="50px" height="70px"></th>
+<th><img src="images/19.jpg" width="50px" height="70px"></th>
 <th>Name: Ravi Chandra Reddy<br>Experience: 6 years<br>Department: neurology</th>
 </tr>
 </table>
@@ -148,7 +148,7 @@ color:white;
 <div id="show1" align="center">
 <table style="width:100%" align="center">
 <tr>
-<th><img src="20.jpg" width="50px" height="70px"></th>
+<th><img src="images/20.jpg" width="50px" height="70px"></th>
 <th>Name: Anuj Soni<br>Experience: 8 years<br>Department: orthopaedics</th>
 </tr>
 </table>
@@ -158,7 +158,7 @@ color:white;
 <div id="show1" align="center">
 <table style="width:100%" align="center">
 <tr>
-<th><img src="21.jpg" width="50px" height="70px"></th>
+<th><img src="images/21.jpg" width="50px" height="70px"></th>
 <th>Name: Ramesh Singh<br>Experience: 9 years<br>Department: cardiology</th>
 </tr>
 </table>
