modified all the files

--- a/account.html
+++ b/account.html
@@ -1,36 +1,47 @@
 <html>
+
 <head>
-<style>
-h1 {
-color:red;
-}
-#show1
-{
-height:410px;
-width:500px;
-opacity:0.9;
-margin-left:500px;
-margin-top:0px;
-background-color:white;
-}
-.b {
-height:40px;
-width:90px;
-background-color:black;
-color:white;
-}
-</style>
+    <style>
+        h1 {
+            color: red;
+        }
+
+        #show1 {
+            height: 410px;
+            width: 500px;
+            opacity: 0.9;
+            margin-left: 500px;
+            margin-top: 0px;
+            background-color: white;
+        }
+
+        .b {
+            height: 40px;
+            width: 90px;
+            background-color: black;
+            color: white;
+        }
+    </style>
 </head>
+
 <body background="images/download.jpg" align="center">
-<h1 align="center">MY ACCOUNT</h1>
-<div id="show1">
-<table style="width:100%" align="center">
-<tr>
-<th><b>Customer-id:</b><br><input id="a" type="text" placeholder="20418" required><br><br><b>Name:</b><br><input id="a" type="text" placeholder="Nilesh Salunke" required><br><br><b>Age:</b><br><input id="a" type="text" placeholder="27" required><br><br><b>Date of Birth:</b><br><input id="a" type="text" placeholder="22-09-1991" required><br><br><b>Joined on:</b><br><input id="a" type="text" placeholder="22-08-2017" required><br><br><b>Wallet Balance:</b><br><input id="a" type="text" placeholder="550.50" required><br><br><b>Last Appointment:</b><br><input id="a" type="text" placeholder="15-02-2019" required></th>
-<th><img src="4.jpg"></th>
-</tr>
-</table>
-</div>
-<br><br><button class="b" onclick="window.location.href = 'login.html';">LOGOUT</button>
+    <h1 align="center">MY ACCOUNT</h1>
+    <div id="show1">
+        <table style="width:100%" align="center">
+            <tr>
+                <th><b>Customer-id:</b><br><input id="a" type="text" placeholder="20418"
+                        required><br><br><b>Name:</b><br><input id="a" type="text" placeholder="Nilesh Salunke"
+                        required><br><br><b>Age:</b><br><input id="a" type="text" placeholder="27"
+                        required><br><br><b>Date of Birth:</b><br><input id="a" type="text" placeholder="22-09-1991"
+                        required><br><br><b>Joined on:</b><br><input id="a" type="text" placeholder="22-08-2017"
+                        required><br><br><b>Wallet Balance:</b><br><input id="a" type="text" placeholder="550.50"
+                        required><br><br><b>Last Appointment:</b><br><input id="a" type="text" placeholder="15-02-2019"
+                        required></th>
+                <th><img src="4.jpg"></th>
+            </tr>
+        </table>
+    </div>
+    <br><br><button class="b" onclick="window.location.href = 'login.html';">LOGOUT</button>
 </body>
+
 </html
