--- a/info.html
+++ b/info.html
@@ -1,172 +1,177 @@
 <html>
+
 <head>
-<style>
-body {
-background-image: url('images/img.png');
-background-size: cover;
-}
-h1 {
-color:red;
-}
-#show1
-{
-height:100px;
-width:200px;
-opacity:1.5;
-margin-left:160px;
-margin-top:0px;
-background-color:white;
-}
-.d {
-height:40px;
-width:60px;
-background-color:black;
-color:white;
-}
-</style>
+    <style>
+        body {
+            background-image: url('images/img.png');
+            background-size: cover;
+        }
+
+        h1 {
+            color: red;
+        }
+
+        #show1 {
+            height: 100px;
+            width: 200px;
+            opacity: 1.5;
+            margin-left: 160px;
+            margin-top: 0px;
+            background-color: white;
+        }
+
+        .d {
+            height: 40px;
+            width: 60px;
+            background-color: black;
+            color: white;
+        }
+    </style>
 </head>
+
 <body align="center">
-<h1 align="center">STAFF DETAILS</h1>
-<table style="width:100%" align="center">
-<tr>
-<th>
-<div id="show1" align="center">
-<table style="width:100%" align="center">
-<tr>
-<th><img src="images/10.jpg" width="50px" height="70px"></th>
-<th>Name: Naresh Gupta<br>Experience: 4 years<br>Department: cardiology</th>
-</tr>
-</table>
-</div>
-<br><br>
-</th>
-<th>
-<div id="show1" align="center">
-<table style="width:100%" align="center">
-<tr>
-<th><img src="images/11.jpg" width="50px" height="70px"></th>
-<th>Name: Ramesh Singh<br>Experience: 9 years<br>Department: cardiology</th>
-</tr>
-</table>
-</div>
-<br><br>
-</th>
-<th>
-<div id="show1" align="center">
-<table style="width:100%" align="center">
-<tr>
-<th><img src="images/12.jpg" width="50px" height="70px"></th>
-<th>Name: Ramesh Singh<br>Experience: 9 years<br>Department: cardiology</th>
-</tr>
-</table>
-</div>
-<br><br>
-</th>
-</tr>
-<tr>
-<th>
-<div id="show1" align="center">
-<table style="width:100%" align="center">
-<tr>
-<th><img src="images/13.jpg" width="50px" height="70px"></th>
-<th>Name: Alexa Morgan<br>Experience: 5 years<br>Department: dermatology</th>
-</tr>
-</table>
-</div>
-<br><br>
-</th>
-<th>
-<div id="show1" align="center">
-<table style="width:100%" align="center">
-<tr>
-<th><img src="images/14.jpg" width="50px" height="70px"></th>
-<th>Name: Raghu Sharma<br>Experience: 2 years<br>Department: orthopaedics</th>
-</tr>
-</table>
-</div>
-<br><br>
-</th>
-<th>
-<div id="show1" align="center">
-<table style="width:100%" align="center">
-<tr>
-<th><img src="images/15.jpg" width="50px" height="70px"></th>
-<th>Name: Ramesh Singh<br>Experience: 9 years<br>Department: cardiology</th>
-</tr>
-</table>
-</div>
-<br><br>
-</th>
-</tr>
-<tr>
-<th>
-<div id="show1" align="center">
-<table style="width:100%" align="center">
-<tr>
-<th><img src="images/16.jpg" width="50px" height="70px"></th>
-<th>Name: Ravi Chandra Reddy<br>Experience: 6 years<br>Department: neurology</th>
-</tr>
-</table>
-</div>
-<br><br>
-</th>
-<th>
-<div id="show1" align="center">
-<table style="width:100%" align="center">
-<tr>
-<th><img src="images/17.jpg" width="50px" height="70px"></th>
-<th>Name: Anuj Soni<br>Experience: 8 years<br>Department: orthopaedics</th>
-</tr>
-</table>
-</div>
-</th>
-<th>
-<div id="show1" align="center">
-<table style="width:100%" align="center">
-<tr>
-<th><img src="images/18.jpg" width="50px" height="70px"></th>
-<th>Name: Ramesh Singh<br>Experience: 9 years<br>Department: cardiology</th>
-</tr>
-</table>
-</div>
-<br><br>
-</th>
-</tr>
-<tr>
-<th>
-<div id="show1" align="center">
-<table style="width:100%" align="center">
-<tr>
-<th><img src="images/19.jpg" width="50px" height="70px"></th>
-<th>Name: Ravi Chandra Reddy<br>Experience: 6 years<br>Department: neurology</th>
-</tr>
-</table>
-</div>
-<br><br>
-</th>
-<th>
-<div id="show1" align="center">
-<table style="width:100%" align="center">
-<tr>
-<th><img src="images/20.jpg" width="50px" height="70px"></th>
-<th>Name: Anuj Soni<br>Experience: 8 years<br>Department: orthopaedics</th>
-</tr>
-</table>
-</div>
-</th>
-<th>
-<div id="show1" align="center">
-<table style="width:100%" align="center">
-<tr>
-<th><img src="images/21.jpg" width="50px" height="70px"></th>
-<th>Name: Ramesh Singh<br>Experience: 9 years<br>Department: cardiology</th>
-</tr>
-</table>
-</div>
-<br><br>
-</th>
-</tr>
-</table>
-<button class="d" onclick="window.location.href ='project.html';">BACK</button>
+    <h1 align="center">STAFF DETAILS</h1>
+    <table style="width:100%" align="center">
+        <tr>
+            <th>
+                <div id="show1" align="center">
+                    <table style="width:100%" align="center">
+                        <tr>
+                            <th><img src="images/10.jpg" width="50px" height="70px"></th>
+                            <th>Name: Naresh Gupta<br>Experience: 4 years<br>Department: cardiology</th>
+                        </tr>
+                    </table>
+                </div>
+                <br><br>
+            </th>
+            <th>
+                <div id="show1" align="center">
+                    <table style="width:100%" align="center">
+                        <tr>
+                            <th><img src="images/11.jpg" width="50px" height="70px"></th>
+                            <th>Name: Ramesh Singh<br>Experience: 9 years<br>Department: cardiology</th>
+                        </tr>
+                    </table>
+                </div>
+                <br><br>
+            </th>
+            <th>
+                <div id="show1" align="center">
+                    <table style="width:100%" align="center">
+                        <tr>
+                            <th><img src="images/12.jpg" width="50px" height="70px"></th>
+                            <th>Name: Ramesh Singh<br>Experience: 9 years<br>Department: cardiology</th>
+                        </tr>
+                    </table>
+                </div>
+                <br><br>
+            </th>
+        </tr>
+        <tr>
+            <th>
+                <div id="show1" align="center">
+                    <table style="width:100%" align="center">
+                        <tr>
+                            <th><img src="images/13.jpg" width="50px" height="70px"></th>
+                            <th>Name: Alexa Morgan<br>Experience: 5 years<br>Department: dermatology</th>
+                        </tr>
+                    </table>
+                </div>
+                <br><br>
+            </th>
+            <th>
+                <div id="show1" align="center">
+                    <table style="width:100%" align="center">
+                        <tr>
+                            <th><img src="images/14.jpg" width="50px" height="70px"></th>
+                            <th>Name: Raghu Sharma<br>Experience: 2 years<br>Department: orthopaedics</th>
+                        </tr>
+                    </table>
+                </div>
+                <br><br>
+            </th>
+            <th>
+                <div id="show1" align="center">
+                    <table style="width:100%" align="center">
+                        <tr>
+                            <th><img src="images/15.jpg" width="50px" height="70px"></th>
+                            <th>Name: Ramesh Singh<br>Experience: 9 years<br>Department: cardiology</th>
+                        </tr>
+                    </table>
+                </div>
+                <br><br>
+            </th>
+        </tr>
+        <tr>
+            <th>
+                <div id="show1" align="center">
+                    <table style="width:100%" align="center">
+                        <tr>
+                            <th><img src="images/16.jpg" width="50px" height="70px"></th>
+                            <th>Name: Ravi Chandra Reddy<br>Experience: 6 years<br>Department: neurology</th>
+                        </tr>
+                    </table>
+                </div>
+                <br><br>
+            </th>
+            <th>
+                <div id="show1" align="center">
+                    <table style="width:100%" align="center">
+                        <tr>
+                            <th><img src="images/17.jpg" width="50px" height="70px"></th>
+                            <th>Name: Anuj Soni<br>Experience: 8 years<br>Department: orthopaedics</th>
+                        </tr>
+                    </table>
+                </div>
+            </th>
+            <th>
+                <div id="show1" align="center">
+                    <table style="width:100%" align="center">
+                        <tr>
+                            <th><img src="images/18.jpg" width="50px" height="70px"></th>
+                            <th>Name: Ramesh Singh<br>Experience: 9 years<br>Department: cardiology</th>
+                        </tr>
+                    </table>
+                </div>
+                <br><br>
+            </th>
+        </tr>
+        <tr>
+            <th>
+                <div id="show1" align="center">
+                    <table style="width:100%" align="center">
+                        <tr>
+                            <th><img src="images/19.jpg" width="50px" height="70px"></th>
+                            <th>Name: Ravi Chandra Reddy<br>Experience: 6 years<br>Department: neurology</th>
+                        </tr>
+                    </table>
+                </div>
+                <br><br>
+            </th>
+            <th>
+                <div id="show1" align="center">
+                    <table style="width:100%" align="center">
+                        <tr>
+                            <th><img src="images/20.jpg" width="50px" height="70px"></th>
+                            <th>Name: Anuj Soni<br>Experience: 8 years<br>Department: orthopaedics</th>
+                        </tr>
+                    </table>
+                </div>
+            </th>
+            <th>
+                <div id="show1" align="center">
+                    <table style="width:100%" align="center">
+                        <tr>
+                            <th><img src="images/21.jpg" width="50px" height="70px"></th>
+                            <th>Name: Ramesh Singh<br>Experience: 9 years<br>Department: cardiology</th>
+                        </tr>
+                    </table>
+                </div>
+                <br><br>
+            </th>
+        </tr>
+    </table>
+    <button class="d" onclick="window.location.href ='Main Website Page.html';">BACK</button>
 </body>
+
 </html>
