--- a/login.html
+++ b/login.html
@@ -1,59 +1,84 @@
 <!DOCTYPE html>
 <html>
+
 <head>
- <meta charset="UTF-8">
- <title>patient login</title>
- <style type="text/css">
- body{
-  background-image: url('images/images.jpg');
-  background-size: cover;
- }
- .aa{
-  width: 225px;
-  height: 260px;
-  background-color: rgba(0,0,0,0.5);
-  margin: 0 auto;
-  margin-top: 200px;
-  padding-top: 10px;
-  padding-left: 20px;
- padding-right: 20px;
-  border-color: 15px;
-  color:white;
-  font-weight: bolder;
-  font-size: 18px;
- }
-.b {
-height:40px;
-width:160px;
-border-radius: 10px;
- background-color: white;
-color:black;
-}
-.a {
-height:40px;
-width:90px;
-border-radius: 10px;
- background-color: skyblue;
-color:white;
-}
-.d {
-height:40px;
-width:60px;
-background-color:black;
-color:white;
-}
-</style>
+  <meta charset="UTF-8">
+  <title>patient login</title>
+  <style type="text/css">
+    body {
+      background-image: url('images/images.jpg');
+      background-size: cover;
+    }
+
+    .aa {
+      width: 225px;
+      height: 260px;
+      background-color: rgba(0, 0, 0, 0.5);
+      margin: 0 auto;
+      margin-top: 200px;
+      padding-top: 10px;
+      padding-left: 20px;
+      padding-right: 20px;
+      border-color: 15px;
+      color: white;
+      font-weight: bolder;
+      font-size: 18px;
+    }
+
+    .b {
+      height: 40px;
+      width: 160px;
+      border-radius: 10px;
+      background-color: white;
+      color: black;
+    }
+
+    .a {
+      height: 40px;
+      width: 90px;
+      border-radius: 10px;
+      background-color: skyblue;
+      color: white;
+    }
+
+    .d {
+      height: 40px;
+      width: 60px;
+      background-color: black;
+      color: white;
+    }
+  </style>
 </head>
+
 <body align="center">
- <div class="aa">
- <h2>Patient Login</h2>
-  <form >
-   <input id="g" class="b " type="text" placeholder="Enter Your Username" required><br><br>
-   <input  id="h" class="b" type="password" placeholder="Enter Your password" required><br><br>
-   <button class="a "  onclick=validate();>Log-in</button>
-   </form>
- </div>
-<br><br>
-<button class="d"  onclick="window.location.href = 'project.html';">BACK</button>
+  <div class="aa">
+    <h2>Patient Login</h2>
+    <form>
+      <input id="uname" class="b " type="text" placeholder="Enter Your Username" required><br><br>
+      <input id="pwd" class="b" type="password" placeholder="Enter Your password" required><br><br>
+      <input class="a" type="button" value="Login" onclick="validate()">
+      <input class="a" type="reset" value="Reset">
+    </form>
+  </div>
+  <br><br>
+  <script language="javascript">
+
+    function validate() {
+      var username = document.getElementById("uname").value;
+      var password = document.getElementById("pwd").value;
+      if (username == "username" && password == "password@123") {
+        alert("Login successfully");
+        window.location = "account.html"; // Redirecting to other page.
+        return false;
+      }
+      else {
+        alert("Incorrect Username/Password");
+        return false;
+      }
+    }
+
+  </script>
+  <button class="d" onclick="window.location.href = 'Main Website Page.html';">BACK</button>
 </body>
+
 </html>
