--- a/cardiology page.html
+++ b/cardiology page.html
@@ -1,31 +1,45 @@
 <html>
+
 <head>
-<style>
-body {
-background-image: url('images/heart.jpg');
-background-size: cover;
-color:white;
-}
-h1 {
-color:red;
-}
-.a {
-height:40px;
-width:60px;
-background-color:black;
-color:white;
-}
-</style>
+    <style>
+        body {
+            background-image: url('images/heart.jpg');
+            background-size: cover;
+            color: white;
+        }
+
+        h1 {
+            color: red;
+        }
+
+        .a {
+            height: 40px;
+            width: 60px;
+            background-color: black;
+            color: white;
+        }
+    </style>
 </head>
+
 <body>
-<h1 align="center">CARDIOLOGY</h1>
-<p><font size="5"><b><u>About the Cardiology Department</u></b></p>
-<p>Cardiology is the medical speciality dealing with the diagnosis and treatment of diseases and disorders of the heart.</p>
+    <h1 align="center">CARDIOLOGY</h1>
+    <p>
+        <font size="5"><b><u>About the Cardiology Department</u></b>
+    </p>
+    <p>Cardiology is the medical speciality dealing with the diagnosis and treatment of diseases and disorders of the
+        heart.</p>
 
-<p>Cardiologists are specialists in diseases of the heart. The biggest area of heart disease treated is coronary artery disease e.g. angina. Also treated are abnormal heart rhythms, heart failure, high blood pressure and some rarer conditions.</p>
+    <p>Cardiologists are specialists in diseases of the heart. The biggest area of heart disease treated is coronary
+        artery disease e.g. angina. Also treated are abnormal heart rhythms, heart failure, high blood pressure and some
+        rarer conditions.</p>
 
-<p>Cardiologists usually treat heart disease with drugs. Some of them are also able to provide treatment for coronary heart disease with coronary angioplasty (a procedure by which the arteries of the heart are widened). If heart surgery is required, a cardiologist will refer you on to see a cardiothoracic surgeon who would perform the surgery. Cardiothoracic Surgeons from the Queen Elizabeth Hospital, Birmingham hold regular clinics at Hereford County Hospital; however, you will be given a choice of where to go for surgery.</p>
+    <p>Cardiologists usually treat heart disease with drugs. Some of them are also able to provide treatment for
+        coronary heart disease with coronary angioplasty (a procedure by which the arteries of the heart are widened).
+        If heart surgery is required, a cardiologist will refer you on to see a cardiothoracic surgeon who would perform
+        the surgery. Cardiothoracic Surgeons from the Queen Elizabeth Hospital, Birmingham hold regular clinics at
+        Hereford County Hospital; however, you will be given a choice of where to go for surgery.</p>
 
-<br><br><button class="a "onclick="window.location.href = 'project.html';">BACK</button>
+    <br><br><button class="a " onclick="window.location.href = 'Main Website Page.html';">BACK</button>
 </body>
+
 </html
