--- a/neurology page.html
+++ b/neurology page.html
@@ -1,35 +1,53 @@
 <html>
+
 <head>
-<style>
-body {
-background-image: url('images/n.jpg');
-background-size: cover;
-color:white;
-}
-h1 {
-color:red;
-}
-.a {
-height:40px;
-width:60px;
-background-color:black;
-color:white;
-}
-</style>
+    <style>
+        body {
+            background-image: url('images/n.jpg');
+            background-size: cover;
+            color: white;
+        }
+
+        h1 {
+            color: red;
+        }
+
+        .a {
+            height: 40px;
+            width: 60px;
+            background-color: black;
+            color: white;
+        }
+        p{
+            font-size: 1.5em;
+        }
+    </style>
 </head>
-<body  >
-<h1 align="center">NEUROLOGY</h1>
-<p><font size="5"><b><u>About the Neurology Department</u></b></p>
-<p>Fortis top-ranked team of neurologists diagnoses and treats more than 100,000 adults and children each year, including those with complex or rare conditions.</p>
 
-<p>The Fortis Department of Neurology is one of the largest and most comprehensive neurological practices in the world. It includes more than 200 subspecialized experts trained in epilepsy, movement disorders, dementias and other cognitive conditions, stroke and cerebrovascular diseases, neuro-oncology, multiple sclerosis and demyelinating disorders, autoimmune neurology, pediatric neurology, neurophysiology, headache, neuromuscular diseases, peripheral nerve, sleep neurology, and speech pathology.</p>
+<body>
+    <h1 align="center">NEUROLOGY</h1>
+    <p>
+        <b><u>About the Neurology Department</u></b>
+    </p>
+    <p>Fortis top-ranked team of neurologists diagnoses and treats more than 100,000 adults and children each year,
+        including those with complex or rare conditions.</p>
 
-<p><b>The right care the first time</b></p>
-<p>Successful treatment starts with an accurate diagnosis. Fortis doctors take the time to get it right. In a recent study, 88 percent of people who came to Mayo Clinic for a second opinion received a new or refined diagnosis.
-</p>
-<p>You may undergo several tests so that your doctors can identify exactly what's causing your signs and symptoms. Fortis neurologists and neurosurgeons work with radiologists who use innovative and advanced imaging technologies and tools, including 7-Tesla MRI, magnetic resonance elastography, PET imaging and molecular diagnostics.
-</p>
-</font>
-<br><br><button class="a" onclick="window.location.href = 'project.html';">BACK</button>
+    <p>The Fortis Department of Neurology is one of the largest and most comprehensive neurological practices in the
+        world. It includes more than 200 subspecialized experts trained in epilepsy, movement disorders, dementias and
+        other cognitive conditions, stroke and cerebrovascular diseases, neuro-oncology, multiple sclerosis and
+        demyelinating disorders, autoimmune neurology, pediatric neurology, neurophysiology, headache, neuromuscular
+        diseases, peripheral nerve, sleep neurology, and speech pathology.</p>
+
+    <p><b>The right care the first time</b></p>
+    <p>Successful treatment starts with an accurate diagnosis. Fortis doctors take the time to get it right. In a recent
+        study, 88 percent of people who came to Mayo Clinic for a second opinion received a new or refined diagnosis.
+    </p>
+    <p>You may undergo several tests so that your doctors can identify exactly what's causing your signs and symptoms.
+        Fortis neurologists and neurosurgeons work with radiologists who use innovative and advanced imaging
+        technologies and tools, including 7-Tesla MRI, magnetic resonance elastography, PET imaging and molecular
+        diagnostics.
+    </p>
+    <br><br><button class="a" onclick="window.location.href = 'Main Website Page.html';">BACK</button>
 </body>
+
 </html
