--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
         <br><b><u>For Emergency</u></b>: 101
         </p>
         <br>
-        <button class="a" onclick="window.location.href = 'Main Website Page.html';">BACK</button>
+        <button class="a" onclick="window.location.href = 'index.html';">BACK</button>
     </body>
 
     </html>
