--- a/appointment.html
+++ b/appointment.html
@@ -145,6 +145,6 @@
             <button class="c" type="reset" value="Reset">RESET</button>
          </form>
    </div>
-   <button class="d" onclick="window.location.href ='Main Website Page.html';">BACK</button>
+   <button class="d" onclick="window.location.href ='index.html';">BACK</button>
 </body>
 </html
