--- a/cardiology page.html
+++ b/cardiology page.html
@@ -39,7 +39,7 @@
         the surgery. Cardiothoracic Surgeons from the Queen Elizabeth Hospital, Birmingham hold regular clinics at
         Hereford County Hospital; however, you will be given a choice of where to go for surgery.</p>
 
-    <br><br><button class="a " onclick="window.location.href = 'Main Website Page.html';">BACK</button>
+    <br><br><button class="a " onclick="window.location.href = 'index.html';">BACK</button>
 </body>
 
 </html
