--- a/dermatology page.html
+++ b/dermatology page.html
@@ -69,7 +69,7 @@
         <p>Each year, more than 65,000 people seek care at Mayo Clinic for skin conditions and undergo more than 7,000
             surgical procedures.<br></p>
     </div>
-    <br><button class="a" onclick="window.location.href = 'Main Website Page.html';">BACK</button>
+    <br><button class="a" onclick="window.location.href = 'index.html';">BACK</button>
 </body>
 
 </html
