--- a/details.html
+++ b/details.html
@@ -67,7 +67,7 @@
         <br><img src="images/2.jpg" width="150" height="175"><br>
         Appointment Id: 4809<br> Name: sher singh<br> Age: 25<br> Department: surgery<br>Appointment Date: 14-4-2019<br>
     </div>
-    <br><br><button class="a" onclick="window.location.href = 'Main Website Page.html';">BACK</button>
+    <br><br><button class="a" onclick="window.location.href = 'index.html';">BACK</button>
 </body>
 
 </html>
