--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
   <table style="width:100%" align=center>
     <tr>
-      <th> <button class="button" onclick="window.location.href = 'project.html';">HOME</button></th>
+      <th> <button class="button" onclick="window.location.href = 'index.html';">HOME</button></th>
       <th>
       <th>
         <div class="dropdown">
