--- a/info.html
+++ b/info.html
@@ -171,7 +171,7 @@
             </th>
         </tr>
     </table>
-    <button class="d" onclick="window.location.href ='Main Website Page.html';">BACK</button>
+    <button class="d" onclick="window.location.href ='index.html';">BACK</button>
 </body>
 
 </html>
