--- a/login.html
+++ b/login.html
@@ -78,7 +78,7 @@
     }
 
   </script>
-  <button class="d" onclick="window.location.href = 'Main Website Page.html';">BACK</button>
+  <button class="d" onclick="window.location.href = 'index.html';">BACK</button>
 </body>
 
 </html>
