--- a/neurology page.html
+++ b/neurology page.html
@@ -47,7 +47,7 @@
         technologies and tools, including 7-Tesla MRI, magnetic resonance elastography, PET imaging and molecular
         diagnostics.
     </p>
-    <br><br><button class="a" onclick="window.location.href = 'Main Website Page.html';">BACK</button>
+    <br><br><button class="a" onclick="window.location.href = ' index.html';">BACK</button>
 </body>
 
 </html
