--- a/emergency.html
+++ b/emergency.html
@@ -69,7 +69,7 @@
                         </p>
                 </div>
         </div>
-        <button class="a" align="center" onclick="window.location.href = 'Main Website Page.html';">BACK</button>
+        <button class="a" text-align="center" onclick="window.location.href = 'index.html';">BACK</button>
 </body>
 
 </html>
